--- a/03-Desarrollo/Proyecto formativo django/SaleCold/requirements.txt
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/requirements.txt
@@ -1,15 +1,25 @@
 asgiref==3.4.1
-Django==4.0.1
-django-admin-interface==0.18.4
+Brotli==1.0.9
+cffi==1.15.0
+cssselect2==0.5.0
+Django==4.0.3
+django-admin-interface==0.19.0
 django-colorfield==0.5.0
 django-flat-responsive==2.0
 django-flat-theme==1.1.4
+fonttools==4.31.2
+html5lib==1.1
 mysqlclient==2.1.0
-Pillow==9.0.0
+Pillow==9.0.1
 psycopg2==2.9.3
+pycparser==2.21
+pydyf==0.1.2
+pyphen==0.12.0
 pytest==6.2.5
 pytest-django==4.5.2
 python-decouple==3.6
 pytz==2021.1
 sqlparse==0.4.2
+tinycss2==1.1.1
+weasyprint==54.2
 whitenoise==6.0.0
